# phockup

./: Dockerfile  entrypoint.sh  phockup.py  pyproject.toml
src/: filetype.py  phockup.py
